force-app/main/default/objects/Credit_Shipping_Plan__c/Credit_Shipping_Plan__c.object-meta.xml
<CustomObject>
    <label>Shipping Plan</label>
    <nameField>
        <displayFormat>CSP-{00000000}</displayFormat>
        <label>Shipping Plan No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Shipping Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>