force-app/main/default/objects/Credit_Shipping_Plan__c/fields/Credit_Limit_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Application__c</fullName>
    <label>Credit Limit Application</label>
    <referenceTo>Credit_Limit_Application__c</referenceTo>
    <relationshipName>Credit_Shipping_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>