force-app/main/default/objects/Credit_Shipping_Plan__c/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <description>出运金额</description>
    <label>Shipping Amount(USD)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>