force-app/main/default/objects/Credit_Shipping_Plan__c/fields/Shipping_Month__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Month__c</fullName>
    <inlineHelpText>Please check the format of the year and month (yyyy - mm). The time range is from the month of the application date to the same month of the following year.</inlineHelpText>
    <label>Shipping Month</label>
    <length>7</length>
    <type>Text</type>
</CustomField>