force-app/main/default/objects/Credit_Shipping_Plan__c/validationRules/Shipping_Month_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Month_Format</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(REGEX(Shipping_Month__c,&quot;^\\d{4}-\\d{2}$&quot;)), 
    DATEVALUE(Shipping_Month__c + &apos;-01&apos;) &lt; DATEVALUE(TEXT(YEAR(DATEVALUE(Credit_Limit_Application__r.CreatedDate))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Credit_Limit_Application__r.CreatedDate))) + &apos;-01&apos;), 
    DATEVALUE(Shipping_Month__c + &apos;-01&apos;) &gt; DATEVALUE(TEXT(YEAR(DATEVALUE(Credit_Limit_Application__r.CreatedDate))+1) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Credit_Limit_Application__r.CreatedDate))) + &apos;-01&apos;)
)</errorConditionFormula>
    <errorDisplayField>Shipping_Month__c</errorDisplayField>
    <errorMessage>Please check the format of the year and month (yyyy - mm). The time range is from the month of the application date to the same month of the following year.</errorMessage>
</ValidationRule>